All content added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
   <title>Excursion</title>
   <!-- Linking CSS sheet -->
-  <link href="/Users/maameappiah-korang/Documents/Projects/Excursion/Resources/index.css"
+  <link href="/Users/maameappiah-korang/Documents/Projects/excursion/resources/style.css"
   type="text/css" rel="stylesheet">
 </head>
 <body>
 <!-- Title -->
 <h1>Discover hidden places in the world around you</h1>
+<h2>Download Excursion (Coming soon!)</h2>
+<!--Add video image -->
+
+<video autoplay src="https://f8rs2vq417gjbj619si181402ovpf5qdm89tc3v2ir6vb32gt94g.codecademy.cloud/resources/videos/excursion.mp4"
+ class="images">Video not supported</video>
+
+<h3>Your personal travel guide</h3>
+<h4>Excursion remembers places you like, and recommends new
+   points of interest around you.</h4>
+
+<!--Add Landscape image -->
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"
+     alt="Image Cannot Be Displayed" class="images">
+
+     <br/>
+
+<!--Add Logo image -->
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"
+     alt="Image Cannot Be Displayed" class="images">
+
+<h3>Coming Soon for iPhone and Android</h3>
+<h2>Download Excursion (Coming soon!)</h2>
+
 
 
 </body>
