Final html sheet

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
 <h3>Coming Soon for iPhone and Android</h3>
 <h2>Download Excursion (Coming soon!)</h2>
-
-
+<h5>	&copy; Excursion</h5>
 
 </body>
 </html>
